--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
             could build in order to better society and humanity, like a relaxation app and a daily calorie counter app. Following a
             discussion among the team members, we chose to implement Sang's suggestion for an AI that focuses mostly on human resources.</p>
             <br>
-            <br>
             <h3>Summarising our Ideas</h3>
             <p>We were trying to avoid making the app different from the job-finding software that we already had when we first tried
             to think of features for it. After a few discussions, we decided that we had placed too much emphasis on the interactions
@@ -73,14 +72,13 @@
             they mentioned into data that our AI can use is quite tough. Thus, we made the decision to concentrate on the strategies
             that will benefit both companies and employees the most. </p>
             <br>
-            <br>
             <h3>Different Features for Companies and Candidates</h3>
             <p>Setting up interviews was the first action we took. We created a portal where businesses can schedule a certain time
             for interviews and candidates can choose when to show up. The employers save a ton of time by not having to call every
             applicant to schedule a meeting. Additionally, candidates are free to select a time that works for them. The next feature
             we implemented for businesses is auto-extract the data they require. By just snapping a photo of their resume, prospects
-            can post it. </p>
-            <br>
+            can post it. 
+            </p>
             <br>
             <p>We set up a system for the candidates to upload their resumes that will automatically highlight their strongest skills.
             They can use AI to help them emphasise their assets after taking a picture of their résumé. It can inform employers of the
@@ -88,14 +86,12 @@
             employers to remark on the kind of teammates they would recommend and how it would be to have you on staff.
             </p>
             <br>
-            <br>
             <p>The last function we offered was automatic email sending, which was available to both employers and candidates.
                 Companies, for instance, are notified through email whenever new applicants are submitted, and applicants are notified
                 when an interview request is approved by the company for which they are applying. The human resources division of
                 businesses would benefit greatly from the time and resources saved by doing this. We can also utilise this information
                 to inform businesses that are having trouble hiring why the majority of candidates do not submit applications to them
                 and what they could do differently in the future. For their candidates, companies can also upload an email format. </p>
-            <br>
             <br>
             <h3>Aims for the Future</h3>
             <p>
@@ -107,7 +103,6 @@
                 there are many new businesses as a result of the pandemic, finding personnel for them can be challenging. They spent
                 a lot of money simply to promote their business. So we decided to make it user-friendly for everyone who needs it. 
             </p>
-            <br>
             <br>
             <h3>Important information</h3>
             <p>At this time, our project does not require any fancy features. We concentrated on how to best serve both end users.
