--- a/index.html
+++ b/index.html
@@ -55,47 +55,44 @@
             <h2 id ="4.2. Plans And Progress">4.2.1 Plans And Progress</h2>
             <h3>Forming a Group</h3>
             <p>We weren't particularly successful in the recruiting stage; we had intended for one of our members—David's friend—to join
-            the group project. However, he was not in the same class as us. Tuan was the member that the professor assigned to us. 
-            Sadly, he was involved in an accident and could not stay with us for very long. We initially had trouble coming up with
-            a concept because there are countless possibilities given the technology of today. We had a number of ideas for what we
-            could build in order to better society and humanity, like a relaxation app and a daily calorie counter app. Following a
-            discussion among the team members, we chose to implement Sang's suggestion for an AI that focuses mostly on human resources.</p>
-            <br>
+                the group project. However, he was not in the same class as us. Tuan was the member that the professor assigned to us. 
+                Sadly, he was involved in an accident and could not stay with us for very long. We initially had trouble coming up with
+                a concept because there are countless possibilities given the technology of today. We had a number of ideas for what we
+                could build in order to better society and humanity, like a relaxation app and a daily calorie counter app. Following a
+                discussion among the team members, we chose to implement Sang's suggestion for an AI that focuses mostly on human resources.
+            </p>
             <h3>Summarising our Ideas</h3>
             <p>We were trying to avoid making the app different from the job-finding software that we already had when we first tried
-            to think of features for it. After a few discussions, we decided that we had placed too much emphasis on the interactions
-            between employees and users. Our goal is to become an automatic candidate-finding headhunter firm for the business. When
-            looking for new employees, we questioned some human resources from other businesses on the most crucial quality a candidate
-            hould possess. Despite the fact that each of them provided a different response, they all shared a passion for learning.
-            All the businesses we spoke with agreed that personalities and honesty are the most crucial factors. Even several of the
-            businesses we spoke with highlighted how crucial it is for employees to feel comfortable working together. Making the things
-            they mentioned into data that our AI can use is quite tough. Thus, we made the decision to concentrate on the strategies
-            that will benefit both companies and employees the most. </p>
-            <br>
+                to think of features for it. After a few discussions, we decided that we had placed too much emphasis on the interactions
+                between employees and users. Our goal is to become an automatic candidate-finding headhunter firm for the business. When
+                looking for new employees, we questioned some human resources from other businesses on the most crucial quality a candidate
+                hould possess. Despite the fact that each of them provided a different response, they all shared a passion for learning.
+                All the businesses we spoke with agreed that personalities and honesty are the most crucial factors. Even several of the
+                businesses we spoke with highlighted how crucial it is for employees to feel comfortable working together. Making the things
+                they mentioned into data that our AI can use is quite tough. Thus, we made the decision to concentrate on the strategies
+                that will benefit both companies and employees the most. 
+            </p>
             <h3>Different Features for Companies and Candidates</h3>
             <p>Setting up interviews was the first action we took. We created a portal where businesses can schedule a certain time
-            for interviews and candidates can choose when to show up. The employers save a ton of time by not having to call every
-            applicant to schedule a meeting. Additionally, candidates are free to select a time that works for them. The next feature
-            we implemented for businesses is auto-extract the data they require. By just snapping a photo of their resume, prospects
-            can post it. 
+               for interviews and candidates can choose when to show up. The employers save a ton of time by not having to call every
+                applicant to schedule a meeting. Additionally, candidates are free to select a time that works for them. The next feature
+                we implemented for businesses is auto-extract the data they require. By just snapping a photo of their resume, prospects
+                can post it. 
             </p>
-            <br>
             <p>We set up a system for the candidates to upload their resumes that will automatically highlight their strongest skills.
-            They can use AI to help them emphasise their assets after taking a picture of their résumé. It can inform employers of the
-            candidates' capabilities. We also provided ratings for the candidates. In essence, this tool allows former coworkers and
-            employers to remark on the kind of teammates they would recommend and how it would be to have you on staff.
+                They can use AI to help them emphasise their assets after taking a picture of their resume. It can inform employers of the
+                candidates' capabilities. We also provided ratings for the candidates. In essence, this tool allows former coworkers and
+                employers to remark on the kind of teammates they would recommend and how it would be to have you on staff.
             </p>
-            <br>
             <p>The last function we offered was automatic email sending, which was available to both employers and candidates.
                 Companies, for instance, are notified through email whenever new applicants are submitted, and applicants are notified
                 when an interview request is approved by the company for which they are applying. The human resources division of
                 businesses would benefit greatly from the time and resources saved by doing this. We can also utilise this information
                 to inform businesses that are having trouble hiring why the majority of candidates do not submit applications to them
-                and what they could do differently in the future. For their candidates, companies can also upload an email format. </p>
-            <br>
+                and what they could do differently in the future. For their candidates, companies can also upload an email format. 
+            </p>
             <h3>Aims for the Future</h3>
-            <p>
-                After a few encounters, we first want to work for a single company. We made the decision to think creatively.
+            <p>After a few encounters, we first want to work for a single company. We made the decision to think creatively.
                 Because our initial goal was to facilitate society, our product will resemble an application that anyone can make
                 available for usage by anyone. Things are challenging for both companies and employees two years after the outbreak.
                 Finding employees who are a good fit for an employer may be challenging and time- and money-consuming during the hiring
@@ -103,7 +100,6 @@
                 there are many new businesses as a result of the pandemic, finding personnel for them can be challenging. They spent
                 a lot of money simply to promote their business. So we decided to make it user-friendly for everyone who needs it. 
             </p>
-            <br>
             <h3>Important information</h3>
             <p>At this time, our project does not require any fancy features. We concentrated on how to best serve both end users.
                 If you are a brand-new participant in our project. The user experience and user interface should be your primary areas
