--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
             </li>
             <li><a href="#6. GROUP REFLECTION"> 6. GROUP REFLECTION</a>
             </li>
-
+            <script>
+            function openPPT() {
+            window.open('Group10_IIT_Presentation.pptx');
+            }
+            </script>
+            <a href="#" onclick="openPPT()">Open PPT File</a>
             <h1 id="1. TEAM PROFILE">1. TEAM PROFILE !</h1>
             <p></p>
 
