--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>H+AI Human + Artificial Intellegence</title>
         <link rel="stylesheet" href="style.css">
+        <link href="Group10_IIT_Presentation.pptx"
     </head>
     <body>
         <section class="header">
@@ -48,11 +49,11 @@
             <li><a href="#6. GROUP REFLECTION"> 6. GROUP REFLECTION</a>
             </li>
             <script>
-            function openPPT() {
+            function openPPTX() {
             window.open('Group10_IIT_Presentation.pptx');
             }
             </script>
-            <a href="#" onclick="openPPT()">Open PPT File</a>
+            <a href="#" onclick="openPPTX()">Open PPT File</a>
             <h1 id="1. TEAM PROFILE">1. TEAM PROFILE !</h1>
             <p></p>
 
