--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>H+AI Human + Artificial Intellegence</title>
         <link rel="stylesheet" href="style.css">
-        <link href="Group10_IIT_Presentation.pptx">
+        <link href="Group10_IIT_Presentation.pptx" rel="noopener noreferrer">>
     </head>
     <body>
         <section class="header">
