--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>H+AI Human + Artificial Intellegence</title>
         <link rel="stylesheet" href="style.css">
-        <link href="Group10_IIT_Presentation.pptx" rel="noopener noreferrer">
+        <link href="Group10_IIT_Presentation.pptx" download>
     </head>
     <body>
         <section class="header">
@@ -48,9 +48,13 @@
             </li>
             <li><a href="#6. GROUP REFLECTION"> 6. GROUP REFLECTION</a>
             </li>
+            <button onclick="downloadPPTX()">Download PPTX File</button>
             <script>
-            function openPPTX() {
-            window.open('Group10_IIT_Presentation.pptx');
+            function downloadPPTX() {
+            var link = document.createElement('a');
+            link.href = 'Group10_IIT_Presentation.pptx';
+            link.download = 'Group10_IIT_Presentation.pptx';
+            link.click();
             }
             </script>
             <a href="#" onclick="openPPTX()">Open PPT File</a>
