--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>H+AI Human + Artificial Intellegence</title>
         <link rel="stylesheet" href="style.css">
-        <link href="Group10_IIT_Presentation.pptx" download>
     </head>
     <body>
         <section class="header">
             <div class="text-box">
                 <li><a href="#1. TEAM PROFILE"> 1. TEAM PROFILE</a>
                     <ul>
-                        <a href="#1.1 Santoso David">1.1 Pandega Bimata Abhinaya</a><br>
+                        <a href="#1.1 Santoso David">1.1 Santoso David</a><br>
                         <a href="#1.2 Ho Van Khoa">1.2 Ho Van Khoa</a><br>
                         <a href="#1.3 Tran Minh Sang">1.3 Tran Minh Sang</a><br>
                     </ul>
@@ -48,21 +47,106 @@
             </li>
             <li><a href="#6. GROUP REFLECTION"> 6. GROUP REFLECTION</a>
             </li>
-            <button onclick="downloadPPTX()">Download PPTX File</button>
-            <script>
-            function downloadPPTX() {
-            var link = document.createElement('a');
-            link.href = 'Group10_IIT_Presentation.pptx';
-            link.download = 'Group10_IIT_Presentation.pptx';
-            link.click();
-            }
-            </script>
-            <a href="#" onclick="openPPTX()">Open PPT File</a>
             <h1 id="1. TEAM PROFILE">1. TEAM PROFILE !</h1>
-            <p></p>
-
-
-            <h2 id ="4.2. Plans And Progress">4.2.1 Plans And Progress</h2>
+            <p>We decided to give our team the name H+AI. H+AI is pronounced as "hi." We wanted to make sure that our team name was approachable and easy to
+                remember as our project idea entails fusing human resources with AI. We came up with the moniker H+AI. The name of our group makes it easy to
+                start a conversation and to identify ourselves. It also appropriately identifies us as introverts because we are naturally reserved. </p>
+            <h2 id ="1.1. Santoso David">1.1. Santoso David</h2>
+            <p>My name is Santoso David, my student ID is S3824107, and my email is s3824107@rmit.edu.vn. I am majoring in information technolog (IT) in RMIT Vietnam
+               My dad is Taiwanese, and my mom is Indonesian. Although I can not speak Indonesian fluently, but I can speak Mandarin and Taiwanese, because I went to
+               Taipei International School from kindergarten all the way high school. I had a huge interest about computer from a very young age, I decided I want to
+               persue my career towards IT during high school.They all have one thing in common: making a lot of money, having lots of spare time, and having the
+               opportunity to travel for work. I started to wonder what kinds of employment in the future will have opportunities like this. When I developed my
+               answer, I was a young person, and I had no notion what set information technology apart from engineering. Fortunately, I was quite skilled with
+               computers when I was a small child; all I know is that these works include computers.  But during the first semester in RMIT University, I hit a
+               few bumps during the courses, but I still put in my effort and the spirit of not giving up, hopefully I can pass the courses that I enrolled in.</p>
+            <h2 id ="1.2. Ho Van Khoa">1.2. Ho Van Khoa</h2>
+            <p>My name is Ho Van Khoa (s3997024), and I attend RMIT University Vietnam where I study information technology (IT). Because of the impression that
+                artificial intelligence (AI) gives us and how it has transformed our working and communication processes, my future minor would be artificial
+                intelligence (AI) engineer. Additionally, I believe AI could help people access information and assimilate knowledge more quickly. I like to play
+                first-person shooter (FPS) video games and listen to music as hobbies. Regarding my IT experience, I took part in a game development program run
+                by my uncle's company, where I learned how to use the basics of coding to create several 2D games and gained experience working with other teens
+                in a real workplace. In addition, I became interested in programming following this course and enrolled in a range of IT courses in high school,
+                including basic HTML and simple Python.</p>
+            <h2 id ="1.3. Tran Minh Sang">1.3. Tran Minh Sang</h2>
+            <p>My name is Tran Minh Sang, and I'm now enrolled at RMIT University to pursue a Business (Management) degree. My student email address is
+                s3818464@rmit.edu.vn, and my student ID is s3818464. My personal email address is sangtran082201@gmail.com, so you can contact me there as well.
+                I was born in Vietnam, and I have resided here ever since. The highest degree of schooling I've obtained is a high school diploma, which I received
+                from Binh Long High School for the Gifted. I speak English, Japanese, and my native Vietnamese fluently, and I also have a basic grasp of French.
+                I study for my current degree as well as a variety of additional courses, such as Information Technology, that are somehow related to my major.
+                However, I also enjoy taking pictures, which I would consider to be a pastime. I hope to one day accomplish my dream of coding for my own business
+                while lounging on a cruise ship and documenting the experience on my blog thanks to my expertise in business, IT, and photography.</p>
+            <h1 id ="2. TOOLS">2. TOOLS</h1>
+            <h2 id ="2.1. Website">2.1. Website</h2>
+            <p>
+            </p>
+            <h2 id ="2.2. GitHub">2.2. GitHub</h2>
+            <p>
+            </p>
+            <h2 id ="2.3. Commit Changes">2.3. Commit Changes</h2>
+            <p>
+            </p>
+            <h1 id ="3. PROJECT DESCRIPTION">3. PROJECT DESCRIPTION</h1>
+            <h2 id ="3.1. Topic">3.1. Topic</h2>
+            <p>The purpose of the project is to innovate a recruitment application utilizing the adaptation of Artificial Intelligence into traditional human
+                resource practices, particularly for the hiring process. Specifically, the application will comprise a wide range of key core human resource
+                features using artificial intelligence such as CV scanning, rating, skills assessment, etc. By automating these traditional activities, we would
+                thrive to eliminate these time-consuming and manual tasks that were done using spreadsheets or simple structure, enhancing working process and
+                bring about utmost efficiency. The primary objective is to bring about a cohesive and efficient working process for recruiters and candidates alike,
+                streamlining their navigation through the recruitment process with ease.
+            </p>
+            <p>Through the adaptation of AI into the recruitment process, we aim to achieve not just  automating the activities but also bring about major benefits
+                for the human resource department to achieve efficiency as well as overcoming goals. By leveraging the use of information, data analysis, and
+                machine learning algorithms, we will provide the recruiters with thoughtful insights into each and every candidates’ portfolio, altogether creating
+                a bigger picture that can capture their core characteristics and strengths. Ultimately, the application’s mission is to attract and select
+                candidates, improving recruitment outcome, reducing time to hire, as well as overall efficiency for talent acquisition. 
+            </p>
+            <h2 id ="3.2. Motivation">3.2. Motivation</h2>
+            <p>The motivation behind our project is to utilize AI technology within a business context to transform the recruitment process. The ultimate goal of
+                our project is to improve hiring outcomes, reducing in noteworthy working time and cost savings implementing task automation. The statement is in
+                accordance with contemporary information technology patterns as it highlights our capacity to implement nascent technologies in a pragmatic manner,
+                demonstrating knowledge in software engineering, data analytics, and user interface/user experience. Upon engaging in the project, we would be able
+                to develop our proficiency in information technolgy, specifically artificial intelligence, as well as further soft skills in critical thinking, etc
+                thereby presenting a persuasive argument to current business context regarding the utilization of technology for consequential resolutions.
+            </p>
+            <h2 id ="3.3. Landscape">3.3. Landscape</h2>
+            <p>Within the realm of recruitment systems and products, there exist numerous functioning solutions and competitors that incorporate artificial
+                intelligence technology. Popular services include Applicant Tracking Systems (ATS) such as Workday, Greenhouse, and Jobvite, which streamline
+                recruitment processes. In addition, automated screening tools that utilize artificial intelligence, such as HireVue and Ideal, have been developed
+                to speed up the initial assessment of resumes. AI-powered talent sourcing tools such as Entelo and HiringSolved are utilized for candidate
+                identification, while technical capabilities are assessed through skills evaluation platforms like Codility and HackerRank. Our project stands out
+                by combining these key features into a comprehensive AI-powered recruitment application that integrates automated resume screening, intelligent
+                candidate sourcing, bias reduction measures, and data-driven decision-making. Our application's strength lies in its ability to provide holistic
+                and end-to-end recruitment support, offering a unified platform that brings together multiple AI-driven features for enhanced efficiency, accuracy,
+                and an improved candidate and recruiter experience. 
+            </p>
+            <h1 id ="4. DETAILED AIMS">4. DETAILED AIMS</h1>
+            <h2 id ="4.1. Aims">4.1. Aims</h2>
+            <p>The aim of this IT project is to revolutionize the recruitment process in businesses by maximizing the power of artificial intelligence (AI). For an
+                easy term, we planned to program our AI system to stimulate thinking and reasoning of a recruiter. Our goal is to create a recruitment system that
+                can transform the way businesses find, evaluate, and hire candidates. We also aim to design a system that can enhance the performance of businesses
+                by finding the best talent available in the competitive labor market. Compared to the old and traditional recruitment methods which are more
+                inefficient, biased by the recruiter and time-consuming because it has to go through many processes. The new recruitment process which applies AI
+                technologies designed to handle large amounts of different sets of data including resumes, past performance, KPIs, etc. As a result, it give
+                businesses the best insights and recommendations to identify the most qualified candidates which will significantly improve the recruitment result
+                and enhance candidate selection by using machine learning and take advantages of the development of the advanced algorithm.
+            </p>
+            <h3>GOAL 1: Having better outcomes in workforce</h3>
+            <p>Our first goal in this project is to find the most suitable employees that have the same purposes and the goals with a business in order to
+                establish a strong sense of commitment and help them develop in the internal/international market with a cohesive and successful workforce. By using
+                AI technologies into our new recruitment system, they can give businesses insights and recommendations to select the best and suitable employee for 
+                the company by screening their resume and have suitable questions in the interview. This will ensure that the new recruitment process system is
+                focused and relevant by providing valuable recommendations for evaluating candidates for the jobs and departments they are in. Together, humans and AI
+                can operate productively and effectively.
+            </p>
+            <h3>GOAL 2: Creating multicultural working environment</h3>
+            <p>Our second goal to create this project is to develop a multicultural working environment with the best performance from different employees with
+                diverse backgrounds. As we mentioned in the first goal, our AI system can find workers all over the world.  Thus, it is easier for businesses to
+                find the employee has the suitable abilities for their business due to larger labor resources. Thus, they can create a diverse working environment
+                for workers to compete and develop themselves.The reason for this is the more competitive the jobs are, the higher efficiency and the better
+                outcomes a business can have leads to better position in the market and gain more competitive advantage. 
+            </p>
+            <h2 id ="4.2. Plans And Progress">4.2. Plans And Progress</h2>
             <h3>Forming a Group</h3>
             <p>We weren't particularly successful in the recruiting stage; we had intended for one of our members—David's friend—to join
                 the group project. However, he was not in the same class as us. Tuan was the member that the professor assigned to us. 
