--- a/index.html
+++ b/index.html
@@ -146,6 +146,23 @@
                 for workers to compete and develop themselves.The reason for this is the more competitive the jobs are, the higher efficiency and the better
                 outcomes a business can have leads to better position in the market and gain more competitive advantage. 
             </p>
+            <h3>GOAL 3: Reduce significant time and cost of the traditional recruitment process</h3>
+            <p>Our third goal in this project is to fasten and revolutionize the traditional recruitment process which will involve automating tasks such as
+                evaluating resumes, analyzing past performance and scheduling interviews. As evaluating tasks are completed by AI, recruiters will have a large
+                amount of time to select candidates requiring complex and deep thinking that AI cannot perform. The system can also provide insights and feedback
+                to both recruiters and applicants, and help recruiters make better decisions based on data and analytics.
+            </p>
+            <p>
+            Therefore, businesses using our AI system not only can reduce time and cost of the long recruitment process but also improve the experience from both
+            sides of the recruitment: the HR department and the candidates.If things don't go as expected, the most important parts of the project would be
+            evaluated to determine priorities and fallback options and these order will be:
+
+            Goal 1: Better outcomes for the workforce. Establishing a strong and committed workforce that aligns with the company's purposes and goals forms the foundation for success in internal/international markets.
+
+            Goal 2: multiculturalism can be considered as the next priority, as it contributes to long-term growth and competitiveness by creating more competitive and efficient working environments. 
+
+            Goal 3: Reduce time and cost of the traditional recruitment process can be adjusted if necessary because in the development phase of this system, it requires a lot of money and time. However, cost and time efficiency will be considered when this new recruitment system running smoothly
+            </p>
             <h2 id ="4.2. Plans And Progress">4.2. Plans And Progress</h2>
             <h3>Forming a Group</h3>
             <p>We weren't particularly successful in the recruiting stage; we had intended for one of our members—David's friend—to join
@@ -201,9 +218,96 @@
                 and wants. The next thing you should research is what the current employment trends are. We must keep up with the trend
                 as it changes every year along with the needs. In the future, if at all possible, consider integrating more cutting-edge
                 features. Using AI to assist candidates in creating their own unique webpage is one example. Use AI more to finish your
-                jobs since human resources are primarily used for human tasks.</p>
+                jobs since human resources are primarily used for human tasks.
+            </p>
+            <h2 id ="4.2. Roles">4.2. Roles</h2>
+            <p>
+            </p>
+            <h2 id ="4.3. Scopes and Limits">4.3. Scopes and Limits</h2>
+            <h3>Scopes</h3>
+            <p>This project focuses on implementing AI technology to revolutionize the recruitment process in businesses. In our first draft (first idea),
+                we planned to integrate AI systems in various stages of the recruitment process including screening, analyzing performance, interview, etc.
+                Machine learning and deep learning will be necessary in the development phase because they can help us to extract higher-level features of data and
+                we all have enough knowledge to use and develop them. However, due to time and technology limitations, we can not use AI to interview candidates 
+                because they can not generate emotions and empathize with human feelings and it will be against ethics. Despite the fact that it can analyze
+                resumes and application forms, it can not analyze personality, motivation of a person. Therefore, we decided to use this AI system as a tool and
+                businesses should rely on human’s decisions in the recruitment process. We also trained our system into different sets of ethical and moral rules
+                in order to possibly avoid bias and provide the appropriate analysis. As a result, this system will have the including features:
 
-            
+                Scan resume of candidates
+
+                Analyze past performance/stats and give a full report to businesses
+
+                Provide rating of a candidates 
+
+                Automate send email to candidate
+
+                Automate schedule interview for candidates and recruiters
+            </p>
+            <h3>Limitations</h3>
+            <p>There are certain limits that AI engineers and businesses need to consider despite this is the project using AI to enhance the recruitment process.
+                Firstly, the insights and recommendations that this system provides will heavily depend on the quality and the relevance of data that AI engineers
+                trained it on. Secondly, because each recruiter will have a different mindset and criteria to select the appropriate candidates, it will be
+                difficult for AI engineers to observe and analyze this enormous and diverse data. Thirdly, AI is not human, it can not have enough intelligence to
+                create different kinds of emotions due to the limitations of technology. Therefore, a business can not replace the needs of humans by using this AI
+                system to interview people. Lastly, this system will only assist the Human Resource Management department in a business in screening and evaluating
+                candidates based on their past performance and stats. Furthermore, it will not account for different major factors in a working environment that
+                significantly affect the suitability and the effectiveness of an employee in a specific role or department. As a result, it can not define how well
+                they adapt into the business working environment and how effectively they communicate with others colleagues. Therefore, this system is only a tool
+                that supports the HR department to fasten the process of recruitment rather than a replacement system for human decision-making which are
+                stakeholders and shareholders. 
+            </p>
+            <h2 id ="4.5. Tools and Technologies">4.5. Tools and Technologies</h2>
+            <p>In order to improve the user experience and user interface (UI/UX), we would use web design-related technologies, such as Java, HTML, etc.
+                Additionally, front-end and back-end technology tools should be used to achieve the goal of efficiency, which definitely will assist our
+                customers (businesses and recruiters). The following are some language suggestions for back-end website development: Python, Django, Ruby,
+                Node.js, etc.
+
+                For text analyzing, natural language processing libraries such as NLTK, SpaCy, or Stanford NLP are needed. The application of machine learning and
+                deep learning is also a major part that we should focus on as we utilize the power of artificial intelligence in the human resource industry.
+                Additionally, machine learning frameworks will be needed for training machine learning models for tasks such as candidate selecting, resume
+                screening, or interview analysis. TensorFlow, PyTorch, or Scikit-learn are the best tools on the market for developing AI systems, according to
+                several AI engineers and programmers. In particular, scikit-learn, which was constructed using NumPy, SciPy, and matplotlib, gives users a quick,
+                easy, and effective tool for analyzing and comparing various data sets. 
+
+                All of the softwares and tools mentioned above, we will use the stable version in order to avoid any bugs and errors in our system. Regarding
+                software licenses, the specific requirements may different based on the different tools and libraries. However, we will avoid any conflict and
+                inappropriate acts relating to licensing issues by registering if needed.
+
+                In terms of hardware, besides a standard laptop or similar device, there are no specific hardware requirements for the AI recruitment system.
+                However, on a large scale of the project which required lots of computational training and learning, we demand additional hardware resources such
+                as GPUs or cloud-based infrastructure might be necessary to improve performance because our system needs to store a different high-level feature of
+                data from application forms, resumes, and performance/stats of candidates.
+
+                As for prior experience with the tools and technologies, it is definitely advantageous for businesses and the project to have team members in the
+                technical department to have experience with natural language process libraries, machine learning frameworks and database management systems.
+                Furthermore, we demand for employees who work in AI fields such as natural language processing and especially machine learning and deep learning.
+                Specifically, we required a bachelor's or master's degree in computer science or information technology and working experience with these programs
+                for at least 2 years.
+            </p>
+            <h2 id ="4.8. Risks">4.8. Risks</h2>
+            <p>As you know, AI is a very powerful system that can bring numerous benefits to businesses and HR departments. There are still some potential risks
+                and ethical issues related to this tool. By proactively approaching these risks and implementing appropriate solutions, businesses can enhance the
+                system while minimizing potential drawbacks.Here are some key risks to consider:
+
+                Firstly, new employees may not perform as effectively as their previous jobs. The reason for this is because real performance is based on the 
+                adaptation of employees on different sets of backgrounds and environments while the old historical data and resumes that AI learn only show the
+                performance of candidates on the previous job.  Additionally, each person possesses unique personalities and characteristics that can influence
+                their performance in a new role.
+
+                Secondly, security issues and privacy issues are also big challenges for businesses. This is because our AI system requires different kinds of data
+                including resumes, application forms, and even some sensitive personal data such as behaviors, personality characteristics, biometric information
+                (race, face recognition fingerprint, etc). As a result, this will raise some data security concerns for users (candidates and recruiters) and
+                businesses.
+
+                Thirdly, despite the fact that the use of our AI system is to avoid bias in recruiters, recruitment processes using AI may also encounter some bias.
+                The reason for this is AI systems need to train from a wide range of statistics and actual data and these may be biased or reflect existing societal
+                prejudices. 
+
+                Lasly, by utilizing almost everything using the AI system, it may cause a negative impact on a candidate's experience by reducing human interaction.
+                Many people with less skills and abilities than the rest will be frustrated because their jobs completely depend on AI and this may cause a negative
+                impact on society by creating more unemployment because companies will prefer better employees. This will raise enormous ethical problems.
+            </p>
             </div>
         </section>
     
