--- a/index.html
+++ b/index.html
@@ -285,6 +285,12 @@
                 Specifically, we required a bachelor's or master's degree in computer science or information technology and working experience with these programs
                 for at least 2 years.
             </p>
+            <h2 id ="4.6. Testings">4.6. Testings</h2>
+            <p>
+            </p>
+            <h2 id ="4.7. Timeframe">4.7. Timeframe</h2>
+            <p>
+            </p>
             <h2 id ="4.8. Risks">4.8. Risks</h2>
             <p>As you know, AI is a very powerful system that can bring numerous benefits to businesses and HR departments. There are still some potential risks
                 and ethical issues related to this tool. By proactively approaching these risks and implementing appropriate solutions, businesses can enhance the
