--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <div class="text-box">
                 <li><a href="#1. TEAM PROFILE"> 1. TEAM PROFILE</a>
                     <ul>
-                        <a href="#1.1 Santoso David">1.1 Santoso David</a><br>
-                        <a href="#1.2 Ho Van Khoa">1.2 Ho Van Khoa</a><br>
-                        <a href="#1.3 Tran Minh Sang">1.3 Tran Minh Sang</a><br>
+                        <a href="#1.1. Santoso David">1.1. Santoso David</a><br>
+                        <a href="#1.2. Ho Van Khoa">1.2. Ho Van Khoa</a><br>
+                        <a href="#1.3. Tran Minh Sang">1.3. Tran Minh Sang</a><br>
                     </ul>
                 </li>
                 <li><a href="#2. TOOLS"> 2. TOOLS</a>
