--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     </section>
     <section id="4. DETAILED AIMS">
         <div class="container">
+            <h2>Detailed Aims</h2>
             <h3>4.1. Aims</h2>
             <p>The aim of this IT project is to revolutionize the recruitment process in businesses by maximizing the power of artificial intelligence (AI). For an
                 easy term, we planned to program our AI system to stimulate thinking and reasoning of a recruiter. Our goal is to create a recruitment system that
