--- a/index.html
+++ b/index.html
@@ -277,7 +277,20 @@
                 for at least 2 years.
             </p>
             <h3>4.6. Testings</h3>
-            <p>
+            <p>Testing is one of the crucial steps needed to develop the project. A project is continuously tested throughout its development period, and the
+                future development of new features requires the testing to be a coherent process. The first step in our process involves performing user acceptance
+                testing (UAT) with a select cohort of recruiters and HR professionals. The purpose of this exercise is to verify the application's functionality,
+                usability, and overall user experience. The initial phase of testing will yield significant insights and feedback, facilitating the implementation
+                of requisite modifications and the validation of our product development. Furthermore, we will conduct ongoing integration testing during the
+                development phase to verify the appropriate operation of individual elements and their smooth integration. The process will entail conducting
+                thorough unit testing, integration testing, and system testing in order to detect and address any potential bugs, problems, or discrepancies.
+                The evaluation of the efficacy of our AI algorithms will be conducted through the measurement of their accuracy, bias mitigation capabilities, and
+                impact on recruitment outcomes. Having able to achieve the aforementioned goals is a stepping stone for our project to develop cohesive features
+                and improve working efficiency. These benchmarks encompass precise resume screening, enhanced candidate selection, favorable user reviews,
+                heightened efficacy in the recruitment procedure, and congruence with established organizational objectives. However, in order for the testing of
+                the project to be objectively completed, a participation from HR specialist is needed to give a more thoughtful opinions and feedbacks for us to
+                deliver better features. The appropriate quantity of test users is contingent upon the project's scope; however, we envisage collaborating with a
+                representative sample size to acquire significant insights and authenticate the application's efficacy. 
             </p>
             <h3>4.7. Timeframe</h3>
             <p>
@@ -385,5 +398,29 @@
             Strong visual design skills and a creative mind to create, develop unique and engaging user experiences.
             </p>
         </div>
+        <section id="6. GROUP REFLECTION">
+        <div class="container">
+            <h2>Group Reflection</h2>
+            <p>At the end of the assignment, our group performed a thorough analysis of the project. The tasks at hand have been distributed evenly and efficiently,
+                contributing to a smooth working flow and ensuring the outcome of the project is achieved. Additionally, our team has communicated effectively and
+                maintained open and clear verbal interactions with each other, altogether creating a thoughtful collaboration of teamwork. 
+
+                However, there are still some things that we could improve on in order to achieve a better result for our project. Firstly, we should reconsider
+                more about the time for each task that was done, as we have challenges in distributing the time to be more efficient toward the end of the
+                assignment. Additionally, we were having some arguments at some point in the assignment, in which each of the members had a different point of
+                view on the project. What we should have done better was to resolve the conflict and become rather active listeners,  seeking a common ground for
+                everyone. Thus, this has become a vital lesson for us to learn for the future prospects of the program. 
+
+                One thing that was surprising to us was how creative each of us can be. Through collaboration and brainstorming, all of the members have showcased
+                unexpected ideas and their point of view on the project, bringing unique insights to the table and leading to innovative solutions that may not
+                have been initially considered. 
+
+                Ultimately, one thing that we have learned about groups is that they are able to bring about a highly productive and efficient working process
+                if we are able to develop a clear and thorough sense of our project’s purpose and benefit. Having effective leadership can also help us navigate
+                through the assignment’s hard task. Nevertheless, our team leader has proven to be a worthy and successful leader, contributing his knowledge to us
+                effectively and thoroughly. Additionally, he was an active listener, combining this with a shared understanding of goals and expectations.
+                However, groups can also face challenges and hard work in terms of coordination and decision-making. Thus, an understanding of the dynamics and
+                complexities of groups is crucial for our own well-being as well as that of the group as a whole.
+            </p>
 </body>
 </html>
