--- a/index.html
+++ b/index.html
@@ -212,7 +212,48 @@
                 jobs since human resources are primarily used for human tasks.
             </p>
             <h3>4.2. Roles</h3>
-            <p>
+            <p>Ho Van Khoa:
+                Set up the project team and identify the important key users. Perform preliminary study on AI technologies and hiring procedures. Examine the
+                difficulties in the current hiring procedures. 
+                User interface/User experience: Create the data flow, user interface, and user experience (UI/UX) for the system. Create prototypes and wireframes for
+                the important application components. Choose AI tools and techniques. 
+
+                Start application functionality testing, unit testing for individual components, integration testing for proper communication between modules.
+                Continue testing and bug-fixing, enhance the efficiency of the application, and begin user acceptance testing (UAT) with a small number of recruiters
+                and HR specialists. 
+
+                Feedback review: Take into account UAT input, improve application usability and functionality, and keep testing and fixing bugs. 
+                Analyze user feedback and application performance, then continuously improve AI algorithms based on the data and information you gather.
+                Create user manuals and documentation, hold user training sessions for recruiters and HR experts, and get ready for the application's launch. 
+                Reflection and analysis of project outcomes, identification of areas for improvement, and study of potential future additions. 
+                Complete the project documentation, make any necessary changes to the project report in light of comments.
+                Conduct a final review of the project and if able plan for future development..
+
+                David Santoso:
+                Set up the project team and identify the important key users.
+                Planning and starting the project: Set project objectives, parameters, and specifications. 
+                Perform preliminary study on AI technologies and hiring procedures. Analyzing and gathering requirements. To gather requirements, arrange workshops and user interviews. Define the terms "functional" and "non-functional." 
+                Start application functionality testing, unit testing for individual components, integration testing for proper communication between modules.
+
+                Feedback review: Take into account UAT input, improve application usability and functionality, and keep testing and fixing bugs. 
+                Analyze user feedback and application performance, then continuously improve AI algorithms based on the data and information you gather.
+                Complete the project and keep gathering user feedback for future development of new features. 
+                Reflection and analysis of project outcomes, identification of areas for improvement, and study of potential future additions. 
+                Complete the project documentation, make any necessary changes to the project report in light of comments.
+                Conduct a final review of the project and if able plan for future development..
+
+                Tran Sang
+                Planning and starting the project, set project objectives, parameters, and specifications. 
+                Develop the backend, frontend, and database of the application, integrate AI algorithms for resume screening. Also develop key security features. 
+                Start application functionality testing, unit testing for individual components, integration testing for proper communication between modules.
+                Continue testing and bug-fixing, enhance the efficiency of the application, and begin user acceptance testing (UAT) with a small number of recruiters and HR specialists. 
+                Deploy to a testing environment: Take into account UAT input, improve application usability and functionality, and keep testing and fixing bugs. 
+
+                Feedback: Obtain feedback from hiring managers and HR specialists who have used the program, evaluate system performance, and deal with any problems or requests for improvements. 
+                Complete the project and keep gathering user feedback for future development of new features. 
+                Reflection and analysis of project outcomes, identification of areas for improvement, and study of potential future additions. 
+                Examine the use of the technology with a thorough interview with how the users feel working with the technology. 
+                Conduct a final review of the project and if able plan for future development..
             </p>
             <h3>4.3. Scopes and Limits</h3>
             <h4>Scopes</h4>
