--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
             </p>
         </div>
     </section>
-    <section id="5. JOBS AND SKILLS">
+    <section id="5. SKILLS AND JOBS">
         <div class="container">
-            <h2>Jobs and Skills</h2>
+            <h2>Skills and Jobs</h2>
             <h3>Position Description 1: Technical Lead - AI Leader</h3>
             <p>
             Description and Responsibilities:
