--- a/index.html
+++ b/index.html
@@ -2,9 +2,55 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H+AI Human + Artificial Intelligence</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <title>H+AI Human + Artificial Intelligence</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Additional CSS styles */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: "Times New Roman", Times, serif;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+        }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+        }
+        nav ul li {
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            color: #a8dadc;
+        }
+        section {
+            padding: 40px;
+        }
+        h1 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        p {
+           margin-bottom: 20px;
+        }
+    </style>
 <body>
     <header>
         <nav>
