--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
             </ul>
         </nav>
     </header>
+    
+    <section id="start">
+        <div class="start-image">
+            <img src="a.jpeg" alt="H+AI Image" class="center" width="600" height="400" >
+        </div>
+        <div class="start-content">
+            <h2>Welcome to H+AI</h2>
+            <p>Discover the intersection of human intelligence and artificial intelligence.</p>
+        </div>
+    </section>
 
     <section id="1. TEAM PROFILE">
         <div class="container">
