--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     <section id="start">
         <div class="start-image">
-            <img src="a.jpeg" alt="H+AI Image" class="center" width="600" height="400" >
+            <img src="recruitment_1.jpeg" alt="H+AI Image" class="center" width="600" height="400" >
         </div>
         <div class="start-content">
             <h2>Welcome to H+AI</h2>
