--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
         </nav>
     </header>
     
+    <div class="hero">
+
+  <h2>Welcome to the new AI Recruitment system</h2>
+
+  <p>We help companies find the best talent using our new AI recruitment system.</p>
+
+<div class="rating">
+
+  <div class="rating-icon">★★★★★</h2>
+
+  <div class="rating-text">The best in Vietnam</div>
+ 
+</div>
+
+</section>
+    
     <section id="start">
         <div class="start-image">
             <img src="recruitment_1.jpeg" alt="H+AI Image" class="center" width="600" height="400" >
