--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <p>We help companies find the best talent using our new AI recruitment system.</p>
   <p>Discover the intersection of human intelligence and artificial intelligence.</p>
 
-
+</div>
 </section>
     
     <section id="start">
